--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
   color: #f92672;
 }
     </style>
-    <link rel="icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="https://api.nexus150.com/favicon?name=onedb" type="image/x-icon" />
     <link href="stylesheets/screen.css" rel="stylesheet" media="screen" />
     <link href="stylesheets/print.css" rel="stylesheet" media="print" />
       <script src="javascripts/all_nosearch.js"></script>
